--- a/packages/crypto/package.json
+++ b/packages/crypto/package.json
@@ -4,11 +4,11 @@
   "version": "1.16.0",
   "packageManager": "pnpm@9.15.0",
   "description": "Enclosed cross-env crypto primitives",
-  "author": "Corentin Thomasset <corentinth@proton.me> (https://corentin.tech)",
+  "author": "Lalit Manjunatha <lalitmanjunatha2607@gmail.com> (https://lalit-m.webflow.io))",
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/CorentinTh/enclosed"
+    "url": "https://github.com/04312581464/enclosed-lalit"
   },
   "exports": {
     "./package.json": "./package.json",
